K8s-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyego-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-eyego  # Must match the service selector
  template:
    metadata:
      labels:
        app: hello-eyego
    spec:
      containers:
        - name: eyego
          image: 877605608534.dkr.ecr.us-east-1.amazonaws.com/eyego:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ecr-secret  # Ensure this secret exists
