K8s-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyego-service
spec:
  type: LoadBalancer
  selector:
    app: hello-eyego
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
