K8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eyego-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: eyego.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eyego-service
                port:
                  number: 80
